--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tailwindcss -i ./src/tailwind.css -o ./output/tailwind.css -w"
+    "start": "tailwindcss -i ./src/tailwind.css -o ./output/tailwind.css -w"
   },
   "repository": {
     "type": "git",
